@startuml

class Ticket {
  - id
  - prix
}

class Concert {
  - id:int
  - prix:int
  - date:date
  - lieu:string
  - libelle:string
  - capacity:int
}

class User {
  - id:int
  - nom:string
  - prenom:string
  - code postal:string
  - email:string
  - tel:string
  - password:string
  - age:int
  - sexe:[Homme, Femme]

}

class Organisateur {
  - id:int
  - compagnie:string
}

class Artiste {
  - id
  - Nom
  - Prenom
  - Biographie
  - Date de naissance
  - code postal
  - email
  - tel
  - password

}


Concert "1" -- "*" Ticket
User "1" -- "*" Ticket
Concert "*" -- "1" Artiste
Organisateur "1" -- "*" Concert
Organisateur --|> User


@enduml